# dd-python

./: .gitignore  Makefile  NOTES_ABOUT_PYTHON_VERSION.md  README.md  pyproject.toml  tach.yml
smartschedule/: container.py
smartschedule/allocation/: allocated_capability.py  allocation_facade.py  allocations.py  capabilities_allocated.py  capability_released.py  demand.py  demands.py  not_satisfied_demands.py  potential_transfers.py  potential_transfers_service.py  project.py  project_allocation_scheduled.py  project_allocations.py  project_allocations_demands_scheduled.py  project_allocations_id.py  project_allocations_repository.py  projects.py  projects_allocations_summary.py  publish_missing_demands_service.py  resource_id.py  sqlalchemy_project_allocations_repository.py
smartschedule/availability/: availability_facade.py  blockade.py  calendar.py  calendars.py  owner.py  resource_availability.py  resource_availability_id.py  resource_availability_read_model.py  resource_availability_repository.py  resource_grouped_availability.py  resource_id.py  resource_taken_over.py
smartschedule/optimization/: capacity_dimension.py  item.py  optimization_facade.py  result.py  total_capacity.py  total_weight.py  weight_dimension.py
smartschedule/planning/: capabilities_demanded.py  chosen_resources.py  create_project_allocations.py  critical_stage_planned.py  demand.py  demands.py  demands_per_stage.py  edit_stage_date_service.py  needed_resource_chosen.py  plan_chosen_resources.py  planning_facade.py  project.py  project_card.py  (+4 more)
tests/: conftest.py  timeout.py
(+153 files in other folders)
